src/main/scoringCode/problem/p_1/sNo_12/error.out
../problem/p_1/sNo_12/12.c:1:1: error: stray ‘\343’ in program
 ㅎㅎ 정답으로 해죠
 ^
../problem/p_1/sNo_12/12.c:1:2: error: stray ‘\205’ in program
 ㅎㅎ 정답으로 해죠
  ^
../problem/p_1/sNo_12/12.c:1:3: error: stray ‘\216’ in program
 ㅎㅎ 정답으로 해죠
   ^
../problem/p_1/sNo_12/12.c:1:4: error: stray ‘\343’ in program
 ㅎㅎ 정답으로 해죠
    ^
../problem/p_1/sNo_12/12.c:1:5: error: stray ‘\205’ in program
 ㅎㅎ 정답으로 해죠
     ^
../problem/p_1/sNo_12/12.c:1:6: error: stray ‘\216’ in program
 ㅎㅎ 정답으로 해죠
      ^
../problem/p_1/sNo_12/12.c:1:8: error: stray ‘\354’ in program
 ㅎㅎ 정답으로 해죠
        ^
../problem/p_1/sNo_12/12.c:1:9: error: stray ‘\240’ in program
 ㅎㅎ 정답으로 해죠
         ^
../problem/p_1/sNo_12/12.c:1:10: error: stray ‘\225’ in program
 ㅎㅎ 정답으로 해죠
          ^
../problem/p_1/sNo_12/12.c:1:11: error: stray ‘\353’ in program
 ㅎㅎ 정답으로 해죠
           ^
../problem/p_1/sNo_12/12.c:1:12: error: stray ‘\213’ in program
 ㅎㅎ 정답으로 해죠
            ^
../problem/p_1/sNo_12/12.c:1:13: error: stray ‘\265’ in program
 ㅎㅎ 정답으로 해죠
             ^
../problem/p_1/sNo_12/12.c:1:14: error: stray ‘\354’ in program
 ㅎㅎ 정답으로 해죠
              ^
../problem/p_1/sNo_12/12.c:1:15: error: stray ‘\234’ in program
 ㅎㅎ 정답으로 해죠
               ^
../problem/p_1/sNo_12/12.c:1:16: error: stray ‘\274’ in program
 ㅎㅎ 정답으로 해죠
                ^
../problem/p_1/sNo_12/12.c:1:17: error: stray ‘\353’ in program
 ㅎㅎ 정답으로 해죠
                 ^
../problem/p_1/sNo_12/12.c:1:18: error: stray ‘\241’ in program
 ㅎㅎ 정답으로 해죠
                  ^
../problem/p_1/sNo_12/12.c:1:19: error: stray ‘\234’ in program
 ㅎㅎ 정답으로 해죠
                   ^
../problem/p_1/sNo_12/12.c:1:21: error: stray ‘\355’ in program
 ㅎㅎ 정답으로 해죠
                     ^
../problem/p_1/sNo_12/12.c:1:22: error: stray ‘\225’ in program
 ㅎㅎ 정답으로 해죠
                      ^
../problem/p_1/sNo_12/12.c:1:23: error: stray ‘\264’ in program
 ㅎㅎ 정답으로 해죠
                       ^
../problem/p_1/sNo_12/12.c:1:24: error: stray ‘\354’ in program
 ㅎㅎ 정답으로 해죠
                        ^
../problem/p_1/sNo_12/12.c:1:25: error: stray ‘\243’ in program
 ㅎㅎ 정답으로 해죠
                         ^
../problem/p_1/sNo_12/12.c:1:26: error: stray ‘\240’ in program
 ㅎㅎ 정답으로 해죠
                          ^
